# jsonpath

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CODE_OF_CONDUCT.md  LICENSE  Makefile  README.rst  README.template.rst  build.py  conftest.py  default.nix  example.json  flake.nix  jsonpath_build.py  noxfile.py  pyoxidizer.bzl.template  pyproject.toml  requirements-dev.txt  requirements-docs.txt  requirements-mini.txt  requirements.txt  setup.cfg  setup.py
.github/actions/setup-nix/: action.yaml
.github/workflows/: pythonpackage.yml  release.yml  test.yml
docs/source/: api_core.rst  api_parser.rst  api_reference.rst  changelog.rst  conf.py  contributing.rst  history.rst  howto.rst  index.rst  installation.rst  quickstarts.rst  readme.rst
docs/source/_static/: custom.css
jsonpath/: __init__.py  cli.py  core.py  grammar.lark  lark.py  parser.py  sly.py  transformer.py
scripts/: build_readme.py  export_requirements_txt.py  export_requirements_txt.sh  generate_pyoxidizer_bzl.py  requirements-dev.txt  requirements-docs.txt  requirements-mini.txt  watch_build_and_serve_html_docs.py
scripts/requirements/: requirements-dev.txt  requirements-docs.txt  requirements-mini.txt  requirements.txt
tests/: __init__.py  test_cli.py  test_core.py  test_lark.py  test_parse.py  utils.py
