[project]
name = "jsonpath-extractor"
authors = [{ name = "林玮 (Jade Lin)", email = "linw1995@icloud.com" }]
description = "A selector expression for extracting data from JSON."
readme = "README.rst"
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Development Status :: 4 - Beta",
    "Operating System :: POSIX",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
]
keywords = ["data-extractor", "data-extraction", "jsonpath", "json"]
dependencies = ["typing-extensions ~= 3.7"]
requires-python = ">=3.7"
license = { text = "MIT" }
dynamic = ["version"]

[project.urls]
homepage = "https://github.com/linw1995/jsonpath"
repository = "https://github.com/linw1995/jsonpath"
documentation = "https://jsonpath.rtfd.io/en/latest/"

[project.optional-dependencies]
parser = ["lark ~= 1.1.0"]

[project.scripts]
jp = "jsonpath.cli:main"

[build-system]
requires = ["pdm-pep517", "lark ~= 1.1.0"]
backend-path = ["."]
build-backend = "jsonpath_build"

[tool.pdm]
includes = [
    "jsonpath/*.py",
    "jsonpath_build.py",
    "jsonpath/lark_parser.py",
    "jsonpath/py.typed",
    "jsonpath/grammar.lark",
]
excludes = ["**/.mypy_cache"]
version = { use_scm = true }

[tool.pdm.dev-dependencies]
docs = ["sphinx ~= 3.5", "livereload ~= 2.6", "lark ~= 1.1.0"]
test = ["pytest-cov ~= 2.11", "pexpect ~= 4.8", "sybil ~= 2.0"]
build_readme = ["pygments ~= 2.8", "docutils >= 0.16"]
