[project]
name = "jsonpath-extractor"
authors = [{ name = "林玮 (Jade Lin)", email = "linw1995@icloud.com" }]
description = "A selector expression for extracting data from JSON."
readme = "README.rst"
classifiers = [
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Development Status :: 5 - Production/Stable",
  "Operating System :: POSIX",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: Microsoft :: Windows",
]
keywords = ["data-extractor", "data-extraction", "jsonpath", "json"]
dependencies = ["typing-extensions ~= 4.7"]
requires-python = ">=3.10"
license = { text = "MIT" }
dynamic = ["version"]

[project.urls]
homepage = "https://github.com/linw1995/jsonpath"
repository = "https://github.com/linw1995/jsonpath"
documentation = "https://jsonpath.rtfd.io/en/latest/"

[project.optional-dependencies]
parser = [
    "lark~=1.2",
]

[project.scripts]
jp = "jsonpath.cli:main"

[build-system]
requires = ["pdm-pep517", "lark~=1.2"]
backend-path = ["."]
build-backend = "jsonpath_build"

[tool.pdm]
includes = [
  "jsonpath/*.py",
  "jsonpath_build.py",
  "jsonpath/lark_parser.py",
  "jsonpath/py.typed",
  "jsonpath/grammar.lark",
]
excludes = ["**/.mypy_cache"]
version = { use_scm = true }

[tool.pdm.options]
lock = ["-S", "inherit_metadata,no_cross_platform"]

[tool.pdm.dev-dependencies]
docs = ["sphinx~=7.4", "livereload~=2.6", "lark~=1.2", "tornado>=6.3.2"]
test = ["pytest-cov~=5.0", "pytest~=8.0", "pexpect~=4.8", "sybil~=8.0"]
build_readme = ["pygments~=2.8", "docutils>=0.16"]
